--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,23 +27,31 @@ services:
     container_name: fabric-postgres
     restart: unless-stopped
     environment:
-      POSTGRES_USER: ${POSTGRES_USER:-fabric_user}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-fabric_password}
-      POSTGRES_DB: ${POSTGRES_DB:-fabric_management}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_INITDB_ARGS: "--encoding=UTF-8"
     ports:
-      - "${POSTGRES_DOCKER_PORT:-5433}:5432"
+      - "${POSTGRES_PORT:-5433}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./scripts/init-db.sql:/docker-entrypoint-initdb.d/01-init.sql:ro
+      - ./init.sql:/docker-entrypoint-initdb.d:ro
     networks:
       - fabric-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U fabric_user -d fabric_management"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
       start_period: 30s
+    deploy:
+      resources:
+        limits:
+          memory: 2048M
+          cpus: "2.0"
+        reservations:
+          memory: 1024M
+          cpus: "1.0"
 
   # ==============================================
   # CACHE - Redis 7
@@ -52,18 +60,42 @@ services:
     image: redis:7-alpine
     container_name: fabric-redis
     restart: unless-stopped
-    command: redis-server --appendonly yes
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD:-}
+    command: >
+      sh -c '
+        if [ -n "$$REDIS_PASSWORD" ]; then
+          redis-server --requirepass "$$REDIS_PASSWORD" --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru;
+        else
+          echo "WARNING: Redis running without password in development mode";
+          redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru;
+        fi
+      '
     ports:
-      - "${REDIS_DOCKER_PORT:-6379}:6379"
+      - "${REDIS_PORT:-6379}:6379"
     volumes:
       - redis_data:/data
     networks:
       - fabric-network
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      test: |
+        if [ -n "$REDIS_PASSWORD" ]; then
+          redis-cli -a "$REDIS_PASSWORD" ping
+        else
+          redis-cli ping
+        fi
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: "0.5"
+        reservations:
+          memory: 256M
+          cpus: "0.25"
 
   # ==============================================
   # MESSAGE BROKER - Kafka & Zookeeper
@@ -73,12 +105,20 @@ services:
     container_name: fabric-zookeeper
     restart: unless-stopped
     environment:
-      ZOOKEEPER_CLIENT_PORT: ${ZOOKEEPER_PORT:-2181}
+      ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
     ports:
-      - "${ZOOKEEPER_DOCKER_PORT:-2181}:2181"
+      - "${ZOOKEEPER_PORT:-2181}:2181"
     networks:
       - fabric-network
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: "0.5"
+        reservations:
+          memory: 256M
+          cpus: "0.25"
 
   kafka:
     image: confluentinc/cp-kafka:7.5.0
@@ -87,12 +127,11 @@ services:
     depends_on:
       - zookeeper
     ports:
-      - "${KAFKA_DOCKER_PORT:-9092}:9092"
-      - "9093:9093"
+      - "${KAFKA_PORT:-9092}:9092"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://kafka:9093
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://${KAFKA_ADVERTISED_HOST:-localhost}:${KAFKA_PORT:-9092},PLAINTEXT_INTERNAL://kafka:9093
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT_INTERNAL
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
@@ -109,7 +148,15 @@ services:
           "--bootstrap-server",
           "localhost:9092",
         ]
-      interval: 10s
+      interval: 30s
       timeout: 10s
-      retries: 5
+      retries: 3
       start_period: 30s
+    deploy:
+      resources:
+        limits:
+          memory: 1024M
+          cpus: "1.0"
+        reservations:
+          memory: 512M
+          cpus: "0.5"
