--- a/services/company-service/src/main/resources/application-docker.yml
+++ b/services/company-service/src/main/resources/application-docker.yml
@@ -27,7 +27,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
@@ -39,9 +39,9 @@ spring:
     enabled: true
     locations: classpath:db/migration
     baseline-on-migrate: true
-    validate-on-migrate: false
-    clean-disabled: false
-    repair-on-migrate: true
+    validate-on-migrate: true
+    clean-disabled: true # ✅ SECURITY: Prevent data loss
+    repair-on-migrate: false # ✅ SECURITY: Manual repair only
 
   # ===========================================================================
   # CACHE CONFIGURATION
