--- a/services/contact-service/src/main/resources/application-docker.yml
+++ b/services/contact-service/src/main/resources/application-docker.yml
@@ -27,7 +27,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
