--- a/services/contact-service/src/main/resources/application.yml
+++ b/services/contact-service/src/main/resources/application.yml
@@ -29,7 +29,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
