--- a/services/user-service/src/main/resources/application-docker.yml
+++ b/services/user-service/src/main/resources/application-docker.yml
@@ -27,7 +27,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
@@ -39,9 +39,9 @@ spring:
     enabled: true
     locations: classpath:db/migration
     baseline-on-migrate: true
-    validate-on-migrate: false
-    clean-disabled: false
-    repair-on-migrate: true
+    validate-on-migrate: true
+    clean-disabled: true # Security: Prevent data loss
+    repair-on-migrate: false
 
   # ===========================================================================
   # CACHE CONFIGURATION
@@ -52,6 +52,7 @@ spring:
       port: ${REDIS_PORT:6379}
       password: ${REDIS_PASSWORD:}
       timeout: 2000ms
+      connect-timeout: 3000ms
       lettuce:
         pool:
           max-active: 8
@@ -127,12 +128,10 @@ springdoc:
   show-actuator: true
 
   # =============================================================================
-  # SECURITY CONFIGURATION FOR SWAGGER
+  # SWAGGER UI - Docker Environment
   # =============================================================================
-  security:
-    user:
-      name: admin
-      password: admin123
+  # Note: Use strong credentials or disable in production
+  # Consider using OAuth2 or external authentication
 
 # =============================================================================
 # LOGGING CONFIGURATION
