feat(security,config): implement production-ready JWT authentication and environment-driven configuration
  ## Security Enhancements

  ### JWT Authentication Implementation
  - Add servlet-based JwtAuthenticationFilter for microservices authentication
  - Implement JwtAuthenticationEntryPoint for proper 401 error handling
  - Update JwtTokenProvider with issuer and audience validation
  - Add JWT filter to DefaultSecurityConfig with proper exception handling
  - Configure public endpoints: /auth/**, /actuator/**, /swagger-ui/**
  - Protect all other endpoints with JWT authentication (anyRequest().authenticated())
  - Add issuer validation: fabric-management-system
  - Add audience validation: fabric-api
  - Implement stateless session management with JWT

  ### Security Configuration Improvements
  - Fix Flyway clean-disabled: true in contact-service (prevent data loss)
  - Fix API Gateway duplicate RequestRateLimiter
  - Update CORS configuration from wildcard to specific headers
  - Change Actuator show-details to 'when-authorized' for Docker profiles
  - Remove java.util from Kafka trusted packages (deserialization security)
  - Make Redis password mandatory in Docker Compose

  ## Configuration & Environment Management

  ### Environment Variables (.env)
  - Add comprehensive database pool configuration (HikariCP)
    - DB_POOL_MAX_SIZE, DB_POOL_MIN_IDLE
    - DB_CONNECTION_TIMEOUT (increased from 20s to 30s)
    - DB_IDLE_TIMEOUT (increased from 5min to 10min)
    - DB_MAX_LIFETIME (increased from 20min to 30min)
  - Add Redis connection pool configuration (Lettuce)
    - REDIS_POOL_MAX_ACTIVE, REDIS_POOL_MAX_IDLE, REDIS_POOL_MIN_IDLE
    - REDIS_CONNECTION_TIMEOUT, REDIS_COMMAND_TIMEOUT
  - Add cache TTL configuration (CACHE_TTL: 5min, reduced from 10min)
  - Add JWT security configuration
    - JWT_ALGORITHM: HS256
    - JWT_ISSUER: fabric-management-system
    - JWT_AUDIENCE: fabric-api
    - JWT_EXPIRATION: 1 hour (reduced from 24 hours)
    - JWT_REFRESH_

--- a/.env.example
+++ b/.env.example
@@ -18,18 +18,34 @@ POSTGRES_DB=fabric_management
 POSTGRES_USER=fabric_user
 POSTGRES_PASSWORD=change_me_use_strong_password
 
+# HikariCP Connection Pool
+DB_POOL_MAX_SIZE=10             # Maximum pool size (adjust based on load)
+DB_POOL_MIN_IDLE=2              # Minimum idle connections
+DB_CONNECTION_TIMEOUT=30000     # Connection timeout (ms) - 30 seconds
+DB_IDLE_TIMEOUT=600000          # Idle timeout (ms) - 10 minutes
+DB_MAX_LIFETIME=1800000         # Max lifetime (ms) - 30 minutes
+
 # =============================================================================
 # CACHE - Redis
 # =============================================================================
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=change_me_optional
+REDIS_PASSWORD=change_me_strong_password  # Required for Docker, optional for local dev
+
+# Redis Connection Pool (Lettuce)
+REDIS_POOL_MAX_ACTIVE=8         # Maximum active connections
+REDIS_POOL_MAX_IDLE=8           # Maximum idle connections
+REDIS_POOL_MIN_IDLE=2           # Minimum idle connections
+REDIS_CONNECTION_TIMEOUT=2000   # Connection timeout (ms)
+REDIS_COMMAND_TIMEOUT=3000      # Command timeout (ms)
+
+# Redis Cache TTL
+CACHE_TTL=300000                # 5 minutes default (per service can override)
 
 # =============================================================================
 # MESSAGE BROKER - Kafka & Zookeeper
 # =============================================================================
 ZOOKEEPER_PORT=2181
-KAFKA_HOST=localhost
 KAFKA_PORT=9092
 KAFKA_ADVERTISED_HOST=localhost
 KAFKA_BOOTSTRAP_SERVERS=localhost:9092
@@ -63,13 +79,21 @@ COMPANY_SERVICE_URL=http://localhost:8083
 # SECURITY - JWT
 # =============================================================================
 JWT_SECRET=change_me_use_openssl_rand_base64_64
-JWT_EXPIRATION=86400000          # 24 hours in milliseconds
-JWT_REFRESH_EXPIRATION=604800000  # 7 days in milliseconds
+JWT_EXPIRATION=3600000           # 1 hour in milliseconds (production: 15 min recommended)
+JWT_REFRESH_EXPIRATION=86400000  # 24 hours in milliseconds (production: 7 days max)
+JWT_ALGORITHM=HS256              # HMAC SHA-256 (HS256, HS384, HS512)
+JWT_ISSUER=fabric-management-system
+JWT_AUDIENCE=fabric-api
+
+# =============================================================================
+# NOTIFICATION CONFIGURATION
+# =============================================================================
+NOTIFICATION_ENABLED=true         # Enable/disable notification features
 
 # =============================================================================
 # LOGGING
 # =============================================================================
-LOG_LEVEL=INFO
+LOG_LEVEL=INFO                    # Global log level: TRACE, DEBUG, INFO, WARN, ERROR
 
 # =============================================================================
 # JVM OPTIONS (Optional)
