--- a/services/api-gateway/src/main/resources/application-docker.yml
+++ b/services/api-gateway/src/main/resources/application-docker.yml
@@ -15,13 +15,18 @@ spring:
       host: ${REDIS_HOST:redis}
       port: ${REDIS_PORT:6379}
       password: ${REDIS_PASSWORD:}
-      timeout: 2000ms
-      connect-timeout: 3000ms
+      timeout: ${REDIS_CONNECTION_TIMEOUT:2000}ms
+      connect-timeout: ${REDIS_COMMAND_TIMEOUT:3000}ms
       lettuce:
         pool:
-          max-active: 8
-          max-idle: 8
-          min-idle: 0
+          max-active: ${REDIS_POOL_MAX_ACTIVE:8}
+          max-idle: ${REDIS_POOL_MAX_IDLE:8}
+          min-idle: ${REDIS_POOL_MIN_IDLE:2}
+
+  cache:
+    type: redis
+    redis:
+      time-to-live: ${CACHE_TTL:300000} # 5 minutes
 
   # ===========================================================================
   # GATEWAY ROUTES CONFIGURATION
@@ -78,13 +83,18 @@ spring:
 # SERVER CONFIGURATION
 # =============================================================================
 server:
-  port: 8080
+  port: ${API_GATEWAY_PORT:8080}
 
 # =============================================================================
 # SECURITY CONFIGURATION
 # =============================================================================
 jwt:
   secret: ${JWT_SECRET}
+  expiration: ${JWT_EXPIRATION:3600000} # 1 hour
+  refresh-expiration: ${JWT_REFRESH_EXPIRATION:86400000} # 24 hours
+  algorithm: ${JWT_ALGORITHM:HS256}
+  issuer: ${JWT_ISSUER:fabric-management-system}
+  audience: ${JWT_AUDIENCE:fabric-api}
 
 # =============================================================================
 # RESILIENCE4J CONFIGURATION
@@ -125,7 +135,7 @@ management:
         include: health,info,metrics,prometheus,gateway
   endpoint:
     health:
-      show-details: always
+      show-details: when-authorized
   metrics:
     export:
       prometheus:
