--- a/services/company-service/src/main/resources/application.yml
+++ b/services/company-service/src/main/resources/application.yml
@@ -21,11 +21,11 @@ spring:
     password: ${POSTGRES_PASSWORD:fabric_password}
     driver-class-name: org.postgresql.Driver
     hikari:
-      maximum-pool-size: 10
-      minimum-idle: 2
-      connection-timeout: 20000
-      idle-timeout: 300000
-      max-lifetime: 1200000
+      maximum-pool-size: ${DB_POOL_MAX_SIZE:10}
+      minimum-idle: ${DB_POOL_MIN_IDLE:2}
+      connection-timeout: ${DB_CONNECTION_TIMEOUT:30000}
+      idle-timeout: ${DB_IDLE_TIMEOUT:600000}
+      max-lifetime: ${DB_MAX_LIFETIME:1800000}
 
   jpa:
     hibernate:
@@ -51,17 +51,18 @@ spring:
       host: ${REDIS_HOST:localhost}
       port: ${REDIS_PORT:6379}
       password: ${REDIS_PASSWORD:}
-      timeout: 2000ms
+      timeout: ${REDIS_CONNECTION_TIMEOUT:2000}ms
+      connect-timeout: ${REDIS_COMMAND_TIMEOUT:3000}ms
       lettuce:
         pool:
-          max-active: 8
-          max-idle: 8
-          min-idle: 0
+          max-active: ${REDIS_POOL_MAX_ACTIVE:8}
+          max-idle: ${REDIS_POOL_MAX_IDLE:8}
+          min-idle: ${REDIS_POOL_MIN_IDLE:2}
 
   cache:
     type: redis
     redis:
-      time-to-live: 600000 # 10 minutes
+      time-to-live: ${CACHE_TTL:300000} # 5 minutes
 
   # ===========================================================================
   # KAFKA CONFIGURATION
@@ -96,7 +97,7 @@ spring:
 # SERVER CONFIGURATION
 # =============================================================================
 server:
-  port: 8083
+  port: ${COMPANY_SERVICE_PORT:8083}
   servlet:
     context-path: /api/v1/companies
 
@@ -105,8 +106,11 @@ server:
 # =============================================================================
 jwt:
   secret: ${JWT_SECRET}
-  expiration: 86400000  # 24 hours
-  refresh-expiration: 604800000  # 7 days
+  expiration: ${JWT_EXPIRATION:3600000} # 1 hour
+  refresh-expiration: ${JWT_REFRESH_EXPIRATION:86400000} # 24 hours
+  algorithm: ${JWT_ALGORITHM:HS256}
+  issuer: ${JWT_ISSUER:fabric-management-system}
+  audience: ${JWT_AUDIENCE:fabric-api}
 
 # =============================================================================
 # EXTERNAL SERVICES CONFIGURATION
@@ -167,11 +171,11 @@ springdoc:
 # =============================================================================
 logging:
   level:
-    com.fabricmanagement.company: DEBUG
-    org.springframework.security: INFO
-    org.springframework.web: INFO
-    org.hibernate.SQL: DEBUG
-    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+    com.fabricmanagement.company: ${LOG_LEVEL:DEBUG}
+    org.springframework.security: ${LOG_LEVEL:INFO}
+    org.springframework.web: ${LOG_LEVEL:INFO}
+    org.hibernate.SQL: ${LOG_LEVEL:DEBUG}
+    org.hibernate.type.descriptor.sql.BasicBinder: ${LOG_LEVEL:TRACE}
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
     file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
