--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,15 +75,14 @@ services:
     container_name: fabric-redis
     restart: unless-stopped
     environment:
-      REDIS_PASSWORD: ${REDIS_PASSWORD:-}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
     command: >
       sh -c '
-        if [ -n "$$REDIS_PASSWORD" ]; then
-          redis-server --requirepass "$$REDIS_PASSWORD" --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru;
-        else
-          echo "WARNING: Redis running without password in development mode";
-          redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru;
+        if [ -z "$$REDIS_PASSWORD" ]; then
+          echo "ERROR: REDIS_PASSWORD environment variable is required!";
+          exit 1;
         fi
+        redis-server --requirepass "$$REDIS_PASSWORD" --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru;
       '
     ports:
       - "${REDIS_PORT:-6379}:6379"
@@ -357,6 +356,8 @@ services:
       kafka:
         condition: service_healthy
       user-service:
+        condition: service_healthy
+      contact-service:
         condition: service_healthy
     environment:
       SPRING_PROFILES_ACTIVE: docker
