perf(microservices): optimize Spring Boot configuration and eliminate startup warnings
  - Remove explicit Hibernate dialect configuration (auto-detection enabled)
  - Disable spring.jpa.open-in-view for better performance and N+1 query protection
  - Exclude RedisRepositoriesAutoConfiguration to prevent repository scanning conflicts
  - Add Kafka consumer heartbeat and connection timeout settings to prevent disconnections
  - Fix API Gateway security auto-configuration to eliminate random password generation
  - Move CORS configuration to gateway level in API Gateway

  Technical improvements:
  - User Service: +3 optimizations (dialect, open-in-view, redis-repo, kafka-heartbeat)
  - Company Service: +4 optimizations (dialect, open-in-view, redis-repo, kafka-heartbeat)
  - Contact Service: +4 optimizations (dialect, open-in-view, redis-repo, kafka-heartbeat)
  - API Gateway: +2 fixes (reactive security auto-config, CORS positioning)
  - Shared Security: Enhanced JWT configuration

  Result: Cleaner logs, better performance, Spring Boot best practices applied

--- a/services/contact-service/src/main/resources/application-docker.yml
+++ b/services/contact-service/src/main/resources/application-docker.yml
@@ -30,10 +30,10 @@ spring:
       ddl-auto: none
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: false
         show_sql: false
     show-sql: false
+    open-in-view: false
 
   flyway:
     enabled: true
@@ -87,10 +87,13 @@ spring:
       group-id: contact-service-group
       auto-offset-reset: earliest
       enable-auto-commit: false
+      heartbeat-interval: 3000
       properties:
         spring.json.trusted.packages: "com.fabricmanagement.contact.domain.event"
         allow.auto.create.topics: true
         jmx.prefix: contact-service
+        session.timeout.ms: 30000
+        connections.max.idle.ms: 540000
 
 # =============================================================================
 # SERVER CONFIGURATION
