--- a/services/api-gateway/src/main/resources/application.yml
+++ b/services/api-gateway/src/main/resources/application.yml
@@ -21,7 +21,6 @@ spring:
   # ===========================================================================
   cloud:
     gateway:
-      # Route definitions
       routes:
         # User Service Routes
         - id: user-service
@@ -117,7 +116,7 @@ spring:
             allowCredentials: true
             maxAge: 3600
 
-      # Default filters for all routes
+      # Default filters for all routes (kept at gateway level)
       default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
         - AddRequestHeader=X-Gateway-Request, true
@@ -227,11 +226,9 @@ management:
   endpoint:
     health:
       show-details: always
-    gateway:
-      enabled: true
-  metrics:
-    export:
-      prometheus:
+  prometheus:
+    metrics:
+      export:
         enabled: true
 
 # =============================================================================
