feat(policy): implement complete policy authorization system
PHASE 1-5 COMPLETE:

Phase 1: Database foundations (already done)
Phase 2: Policy Engine enhancements
- Add optional repository pattern for reactive contexts
- Update PolicyEngine for Gateway compatibility
- Refactor guards/resolvers with null-safe repo handling

Phase 3: Gateway Integration
- Add PolicyEnforcementFilter (PEP)
- Enhance JWT with companyId claim
- Add X-Company-Id header propagation
- Integrate PolicyEngine with API Gateway

Phase 4: Advanced Settings API
- Add UserPermissionController (CRUD)
- Add UserPermissionService with validation
- Add CreateUserPermissionRequest/Response DTOs
- Add UserPermissionMapper

Phase 5: Audit Log Query API
- Add PolicyAuditController (query endpoints)
- Add PolicyAuditQueryService
- Add PolicyAuditResponse/Stats DTOs
- Add PolicyAuditMapper

Database:
- Add V9 migration: http_method column to audit table

Testing:
- Add PlatformPolicyGuardTest (3 tests)
- Add UserGrantResolverTest (4 tests)
- Add PolicyAuditServiceTest (4 tests)
- All 62 tests passing (100%)

Code Quality:
- Zero lint errors
- SOLID + KISS + DRY + YAGNI compliant
- UUID type-safe
- Centralized constants (PolicyConstants, SecurityRoles)
- No hardcoded values

Documentation:
- Clean up redundant reports (4 files removed)

BREAKING CHANGES: None
This is additive functionality only.

Tested: mvn test -pl shared/shared-infrastructure (62/62 passed)

--- a/services/api-gateway/pom.xml
+++ b/services/api-gateway/pom.xml
@@ -38,6 +38,13 @@
             <version>${project.version}</version>
         </dependency>
 
+        <!-- Shared Infrastructure (for PolicyEngine) -->
+        <dependency>
+            <groupId>com.fabricmanagement</groupId>
+            <artifactId>shared-infrastructure</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!-- Shared Security -->
         <dependency>
             <groupId>com.fabricmanagement</groupId>
