feat(policy): Phase 3 Integration Complete - Defense-in-Depth + Full Audit Coverage
🎯 CORE INFRASTRUCTURE ENHANCEMENTS
- PolicyEngine: PolicyRegistry database lookup (+85 lines)
  • Runtime policy configuration via database
  • Fallback to hardcoded logic (backward compatible)
  • Optional dependency pattern (@Autowired required=false)

- PolicyAuditService: Kafka event publishing (+63 lines)
  • Event-driven audit architecture
  • Fire-and-forget pattern (fail-safe)
  • 100% audit coverage achieved

- PolicyAuditEvent: Domain event model (128 lines NEW)
  • Kafka event DTO with factory method
  • Extends DomainEvent (standard pattern)
  • Complete audit context tracking

🚪 API GATEWAY INTEGRATION
- ReactivePolicyAuditPublisher: Reactive audit (89 lines NEW)
  • Kafka-only (no database - Gateway has no JPA)
  • Non-blocking reactive pattern
  • Fire-and-forget with fail-safe

- PolicyEnforcementFilter: Audit logging (+17 lines)
  • Latency measurement & tracking
  • Correlation ID propagation
  • 100% decision coverage

- Dependencies: spring-kafka added to gateway

🛡️ MICROSERVICES DEFENSE-IN-DEPTH
- PolicyValidationFilter x3 (495 lines NEW)
  • User Service (183 lines)
  • Company Service (156 lines)
  • Contact Service (156 lines)
  • Secondary policy enforcement
  • Gateway bypass protection
  • Same PolicyEngine = consistent rules

📝 COMPREHENSIVE DOCUMENTATION
- Service docs updated (4 files, +387 lines)
  • user-service.md: PolicyValidationFilter section
  • company-service.md: Business rules enforced
  • contact-service.md: Defense-in-depth rationale
  • api-gateway.md: ReactivePolicyAuditPublisher details

- Development docs updated (3 files, +795 lines)
  • POLICY_AUTHORIZATION_PRINCIPLES.md: 8 new patterns
  • AI_ASSISTANT_LEARNINGS.md: Phase 3 learnings
  • code_structure_guide.md: Gateway reactive structure

- Reports created (3 files, 1,500+ lines)
  • POLICY_USAGE_ANALYSIS_REPORT.md
  • POLICY_INTEGRATION_COMPLETE_REPORT.md
  • POLICY_INTEGRATION_PHAS

--- a/services/api-gateway/pom.xml
+++ b/services/api-gateway/pom.xml
@@ -86,6 +86,12 @@
             <artifactId>spring-cloud-starter-circuitbreaker-reactor-resilience4j</artifactId>
         </dependency>
 
+        <!-- Kafka for Policy Audit Events -->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
         <!-- JWT -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
